Ticket #28130: Input fields in tables have now no space between itself and the table border which leads to a continous flow. Also ensured that there is no jumping which was noticed in edit mode when you select and deselect different rows.

--- a/com.top_logic.themes.core/src/main/webapp/style/tables.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/tables.css
@@ -1009,7 +1009,7 @@ table .cDecoratedCell > .lFlexible > :first-child:not(a) {
 }
 
 table td span.cDecoratedCell {
-	gap: var(--spacing-02);
+	gap: var(--spacing-01);
 }
 
 .cDecoratedCell .treeType {
@@ -1133,7 +1133,8 @@ table td .cBlockTextInput input,
 table td .cPopupSelect input,
 table td .cDatetime .cDateInput input,
 table td .cDatetime .cTimeInput input,
-table td .cDateInput input {
+table td .cDateInput input,
+table td .ddwttDropBtn {
 	padding: 0 var(--spacing-01);
 }
 
@@ -1387,6 +1388,17 @@ div.dirtyHandlingDialog .changes {
 
 .px-1:has(input) {
     width: 100%;
+	padding: 0 !important;
+}
+
+.lFixedLeft {
+	padding-right: var(--spacing-01);
+}
+
+/* Needs to be changed when px-1 padding changes. Otherwise the table row jumps when selection changed. */
+.px-1:has(input) .lFixedLeft {
+	padding-left: var(--spacing-01);
+	padding-right: 0;
 }
 
 th .px-1 {
